# VideoPlayer

./: .gitignore  AudioProcessor.cpp  AudioProcessor.h  CMakeLists.txt  LoadingWidget.cpp  LoadingWidget.h  NetworkConfig.cpp  NetworkConfig.h  NetworkStreamLoader.cpp  NetworkStreamLoader.h  NetworkStreamManager.cpp  NetworkStreamManager.h  NetworkStreamUI.cpp  NetworkStreamUI.h  OverlayWidget.cpp  OverlayWidget.h  README.md  StreamProtocolHandler.cpp  StreamProtocolHandler.h  VideoPlayer.cpp  VideoPlayer.h  VideoWidget.cpp  VideoWidget.h  main.cpp  resource.qrc
